--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
     "laravel-echo": "^1.15.0",
+    "moment": "^2.29.4",
     "pusher-js": "^8.0.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
