--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ REACT_APP_API = ''
 REACT_APP_ECHO_KEY = ''
 REACT_APP_ECHO_CLUSTER = ''
 REACT_APP_ECHO_WSHOST = ''
-REACT_APP_ECHO_WSPORT = ''
-REACT_APP_ECHO_WSSPORT = ''
-REACT_APP_ECHO_AUTH_ENDPOINT = ''
+REACT_APP_ECHO_WSPORT = ""
+REACT_APP_ECHO_WSSPORT = "443"
+REACT_APP_ECHO_AUTH_ENDPOINT = ""
