--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3006 react-scripts",
+    "start": "react-scripts start",
     "dev": "PORT=3006 react-scripts start",
     "prod": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
