--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
     "dayjs": "^1.11.7",
+    "emoji-picker-react": "^4.4.10",
     "formik": "^2.4.2",
     "laravel-echo": "^1.15.0",
     "pusher-js": "^8.0.1",
