--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dev": "PORT=3006 react-scripts start",
     "prod": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
+    "deploy":"react-scripts build && firebase deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
