--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
+    "base-64": "^1.0.0",
     "dayjs": "^1.11.7",
     "emoji-picker-react": "^4.4.10",
     "formik": "^2.4.2",
@@ -28,6 +29,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "typescript": "^5.0.4",
+    "utf8": "^3.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
@@ -36,7 +38,7 @@
     "dev": "PORT=3006 react-scripts start",
     "prod": "PORT=3006 react-scripts start",
     "build": "react-scripts build",
-    "deploy":"react-scripts build && firebase deploy",
+    "deploy": "react-scripts build && firebase deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -57,5 +59,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/base-64": "^1.0.0",
+    "@types/utf8": "^3.0.1"
   }
 }
